# Mini_Projetos_Treino

./: README.md  app.py  pyproject.toml  testes.ipynb
